[package]
name = "tomarapocore-domainlogic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exprocess = { git = "https://github.com/itskihaga/exprocess-rust.git",tag = "v0.0.1"}
rand = { version = "0.8" }